UI changes, small warning fixes, and notifications